--- a/Application/HomeTask.ServiceProvider/HomeTask.ServiceProvider/appsettings.Development.json
+++ b/Application/HomeTask.ServiceProvider/HomeTask.ServiceProvider/appsettings.Development.json
@@ -13,5 +13,6 @@
     "Scope": "urn:02676309-9d5e-424d-8c2b-363a07e39afb"
   },
   "CertificateName": "909537a7-c7f0-4b9c-8902-ef930330a7da-13ff3399-c425-404c-8963-da6bf579b8db.pem",
-  "ProfileUrl": "https://accounts.matrix42.com/api/session/profile"
+  "ProfileUrl": "https://accounts.matrix42.com/api/session/profile",
+  "OrdersBaseUrl": "https://localhost:44349"
 }
