netcore version downgraded to 2.0

--- a/Application/HomeTask.ServiceProvider/HomeTask.ServiceProvider/appsettings.Development.json
+++ b/Application/HomeTask.ServiceProvider/HomeTask.ServiceProvider/appsettings.Development.json
@@ -14,5 +14,5 @@
   },
   "CertificateName": "909537a7-c7f0-4b9c-8902-ef930330a7da-13ff3399-c425-404c-8963-da6bf579b8db.pem",
   "ProfileUrl": "https://accounts.matrix42.com/api/session/profile",
-  "OrdersBaseUrl": "https://localhost:44349"
+  "OrdersBaseUrl": "http://localhost:58195"
 }
